--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -6,6 +6,7 @@
     background-color: #eee;
     justify-content: center;
     margin-top: 15px;
+    padding-top: 30px;
   }
 
   .Main .wrapper-main {
@@ -111,8 +112,15 @@
     height: 30px;
     width: 30px;
     margin-left: 15px;
+    transition: all 0.2s
   }
-
+  .Timeline .Action .droTym:hover {
+    width: 32px;
+    height: 32px;
+  }
+  .Timeline .Action .droTym.liked {
+    background-color: #ed4956;
+  }
   .Timeline .Action .ogikobiet {
     margin-right: 15px;
   }
@@ -147,7 +155,12 @@
     margin-top: 5px;
     opacity: 0.7;
   }
-
+  .Timeline .des-add {
+    display: none;
+  }
+  .Timeline .des-add.display {
+    display: inline;
+  }
   .Timeline .AddComment input {
     border: none;
     flex-grow: 8;
@@ -249,3 +262,36 @@
   .Left .wrapper-left a {
     text-decoration: none;
   }
+
+
+/* Upload images */
+  .Upload {
+    background-color: #fff;
+    margin-bottom: 15px;
+    padding-top: 10px;
+   }
+   .Upload .second {
+     display: flex;
+     flex-direction: column;
+   }
+   .Upload .wrapper-upload {
+     margin-left: 15px;
+   }
+   .Upload .second input {
+     width: 100%;
+     height: 50px;
+     border:  none;
+     padding-left: 30px;
+     margin-bottom: 10px;
+   }
+   .Upload .second input:focus {
+     outline: none;
+   }
+   .Upload img {
+     height: 300px;
+     margin-bottom: 15px;
+   }
+   .Upload button {
+     width: 97%;
+     margin-bottom: 15px;
+   }
